fix for the cleaner code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,7 +61,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/views/order/template/TestDatePick.tsx"  ],
   "exclude": [
     "node_modules"
   ]
