--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^6.1.1",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.17.0",
     "@tanstack/react-query": "^5.51.15",
     "apexcharts": "^3.49.1",
