--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "next": "^14.2.3",
+    "nextjs": "^0.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
