--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,8 +60,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "src/views/order/template/TestDatePick.tsx"  ],
+    ".next/types/**/*.ts" ],
   "exclude": [
     "node_modules"
   ]
