--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@tanstack/react-query": "^5.51.15",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.7",
-    "classnames": "^2.5.1",
-    "dayjs": "^1.11.13",
-    "next": "^14.2.3",
+    // "classnames": "^2.5.1",
+    // "dayjs": "^1.11.13",
+    // "next": "^14.2.3",
     "nextjs": "^0.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.0",w
     "react-hot-toast": "^2.4.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-use": "^17.5.0",
