Build QR code page , button , id

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,10 +43,9 @@
   ],
   "markdown.extension.toc.updateOnSave": false,
   "files.insertFinalNewline": true,
-  "editor.linkedEditing": false,
+  "editor.linkedEditing": true,
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.words": [
-    "iconify",
-    "justifycontent"
+    "iconify"
   ]
 }
