--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,7 +60,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ],
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
