--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@tanstack/react-query": "^5.51.15",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.7",
-    // "classnames": "^2.5.1",
-    // "dayjs": "^1.11.13",
-    // "next": "^14.2.3",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "next": "^14.2.3",
     "nextjs": "^0.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",w
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-use": "^17.5.0",
     "server-only": "^0.0.1",
@@ -45,6 +48,7 @@
     "@iconify/types": "^2.0.0",
     "@iconify/utils": "^2.1.24",
     "@svgr/webpack": "^8.1.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
