--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^6.1.1",
+    "@mui/material-next": "6.0.0-alpha.126",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.17.0",
@@ -32,7 +33,7 @@
     "next": "^14.2.3",
     "nextjs": "^0.0.3",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "^1t.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
