--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@svg/*": [
+        "./src/@core/svg/*"
+      ],
       "@configs/*": [
         "./src/configs/*"
       ],
