--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-package.json
 
 
 # testing
@@ -44,3 +43,6 @@ src/assets/iconify-icons/generated-icons.css
 
 # package-lock.json
 package-lock.json
+
+# package.json
+package.json
