--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^6.1.1",
-    "@mui/material-next": "6.0.0-alpha.126",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.17.0",
@@ -27,7 +27,7 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "leaflet": "^1.9.4", 
+    "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "next": "^14.2.3",
     "nextjs": "^0.0.3",
